# TechCourse_2022_12

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main_window.ui  serialization.cpp  serialization.h  vcpkg.json
client/: CMakeLists.txt  QResources.qrc  client.cmake  main.cpp  main_window.cpp  main_window.h  main_window.ui
client/api/: CMakeLists.txt  api.cpp  api.h
client/nlohmanQt/: CMakeLists.txt  nlohmanQt.cpp  nlohmanQt.h
client/screens/: home.cpp  home.h  home.ui  home.ui.autosave  home.ui.autosave.autosave  login.cpp  login.h  login.ui
client/screens/navigation/: navigation.cpp  navigation.h  navigation.ui
client/screens/navigation/button_decorator/: buttondecorator.cpp  buttondecorator.h
client/screens/navigation/button_decorator/hover/: hover.cpp  hover.h  hover.ui
client/screens/user_profile/: user_profile.cpp  user_profile.h  user_profile.ui
client/screens/user_profile/user_dropdown/: user_dropdown.cpp  user_dropdown.h  user_dropdown.ui
client/screens/user_profile/user_login/: user_login.cpp  user_login.h  user_login.ui
client/screens/widgets/: CMakeLists.txt
client/screens/widgets/confirmation_modal/: CMakeLists.txt  confirmation_modal.cpp  confirmation_modal.h  confirmation_modal.ui
client/screens/widgets/header/: CMakeLists.txt  header.cpp  header.h  header.ui
client/screens/widgets/image_view/: CMakeLists.txt  image_view.cpp  image_view.h  image_view.ui
client/screens/widgets/info_arch/: CMakeLists.txt  categories.h  info_arch.cpp  info_arch.h  info_arch.ui
client/screens/widgets/info_arch/add_cat_window/: CMakeLists.txt  add_cat_window.cpp  add_cat_window.h  add_cat_window.ui
client/screens/widgets/info_arch/cat_button/: CMakeLists.txt  CustomButton.h  cat_button.cpp  cat_button.h  cat_button.ui
client/screens/widgets/info_arch/info_arch_dropdown/: CMakeLists.txt  info_arch_dropdown.cpp  info_arch_dropdown.h  info_arch_dropdown.ui
client/screens/widgets/main_navigation/: CMakeLists.txt  main_navigation.cpp  main_navigation.h  main_navigation.ui
client/screens/widgets/main_navigation/main_button/: CMakeLists.txt  main_button.cpp  main_button.h  main_button.ui
client/screens/widgets/navigation/: CMakeLists.txt  navigation.cpp  navigation.h  navigation.ui
client/screens/widgets/navigation/button_decorator/: CMakeLists.txt  buttondecorator.cpp  buttondecorator.h  buttondecorator.ui
client/screens/widgets/navigation/button_decorator/hover/: CMakeLists.txt  hover.cpp  hover.h  hover.ui
client/screens/widgets/teams/: CMakeLists.txt  teams.cpp  teams.h  teams.ui
client/screens/widgets/user_login/: CMakeLists.txt  user_login.cpp  user_login.h  user_login.ui
client/screens/widgets/user_profile/: CMakeLists.txt  user_profile.cpp  user_profile.h  user_profile.ui
client/screens/widgets/user_profile/user_dropdown/: CMakeLists.txt  user_dropdown.cpp  user_dropdown.h  user_dropdown.ui
client/utils/: CMakeLists.txt
client/utils/click_catch_overlay/: CMakeLists.txt  click_catch_overlay.cpp  click_catch_overlay.h  click_catch_overlay.ui
client/utils/uiUtils/: CMakeLists.txt  uiUtils.h
client/utilsClient/: CMakeLists.txt  nlohmanQt.cpp  nlohmanQt.h
cmake/: utils.cmake
common/: CMakeLists.txt
common/base64/: CMakeLists.txt  base64.c  base64.h
common/models/: ISerializable.h  auth_model.cpp  auth_model.h  categories_model.cpp  categories_model.h  serializable.cpp  serializable.h
common/models/api/: auth_model.cpp  auth_model.h
common/utils/: poco_response.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
server/DAL/: CMakeLists.txt  DAL.cpp  DAL.h  DAL_populate.cpp  DAL_tests.cpp  dal.cpp
server/DAL/include/: DAL.h  dal.h
server/handlers/: auth.cpp  auth.h  categories.cpp  categories.h  handler_includes.h  handlers_factory.cpp  handlers_factory.h  not_found.cpp  not_found.h  root.cpp  root.h  shutdown.cpp  shutdown.h
server/utils/: CMakeLists.txt  auth_utils.cpp  auth_utils.h  categories_utils.cpp  categories_utils.h  phash.cpp  phash.h  poco_request.cpp  poco_request.h  poco_response.cpp  poco_response.h
tests/: CMakeLists.txt  categories.cc  dal.cc  hello_test.cc  login.cc
